# repeng-ensemble

./: AUTO_PROBE_PIPELINE_DESIGN.md  AUTO_PROBE_PIPELINE_NEXT_STEPS.md  DATASET_SUMMARY.md  DECOMPOSITION_PARADIGMS_ANALYSIS.md  DISTILLED_FINDINGS.md  ENSEMBLE_BASIS_ANALYSIS.md  OPTIMAL_SPECIALIST_GROUPING.md  PROBE_QUALITY_INSIGHTS.md  TRUTH_DECOMPOSITION_FINDINGS.md  analyze_dataset_redundancy.py  dataset_analysis_results.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
experiments/: QWEN3_EXPERIMENTS.md  comparison.py  comparison_dataset.py  comparison_sanity_check.py  evaluate_vectors.py  extract_vectors.py  generate_interactive_dashboard.py  run_layer_sweep.sh  saliency_experiment.py  saliency_visualize.py  upload_to_s3_mppr.py  visualize.py  visualize_sanity_check.py
experiments/probe_ensemble/: DATASET_EXAMPLES_VERIFIED.txt  EXECUTION_READY.md  EXPERIMENTS_RUN.md  FINAL_SYNTHESIS.md  FINDINGS.md  KEY_TAKEAWAYS.md  NEXT_STEPS.md  QUICKSTART.md  README.md  generate_diverse_novel_prompts.py  generate_subset_activations.py  multi_dataset_training.py  probe_vector_pca.py  replicate_mishajw_figures.py  rlaif_refinement.py  run_all_experiments.py  test_novel_prompts.py  test_on_diverse_prompts.py
output/: dashboard.html
output/comparison/qwen3-4b/: probe_evaluate-v2.jsonl  sanity_check_results.jsonl
repeng/datasets/: complex_truth.py  diverse_truth.py
repeng/datasets/activations/: creation.py
repeng/datasets/elk/: complex_truth_dataset.py  (+4 more)
repeng/models/: llms.py  points.py  types.py
repeng/probes/: linear_discriminant_analysis.py
(+65 files in other folders)
